--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/13/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">85.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">85.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.0&#176;F</td>
+        <td class="data">85.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.0&#176;F</td>
+        <td class="data">44.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.007)</td>
+        <td class="data">29.849 inHg (-0.003)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">7 mph S (180&#176;)</td>
+        <td class="data">6 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.3&#176;F</td>
+        <td class="data">79.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="01:39:22 PM">
-            45.6</span><br/>
+          <span title="04:41:26 PM">
+            45.7</span><br/>
           <span title="02:16:06 PM">
             36.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:39:22 PM (Sunday)">
-            45.6</span><br/>
+          <span title="04:41:26 PM (Sunday)">
+            45.7</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
         </td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          257
+          256
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:36:02 PM">
-            79.3</span><br/>
+          <span title="04:42:02 PM">
+            79.4</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:36:02 PM (Sunday)">
-            79.3</span><br/>
+          <span title="04:42:02 PM (Sunday)">
+            79.4</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 1 hour, 52 minutes</td>
+      <td class="data">12 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 1 hour, 52 minutes</td>
+      <td class="data">12 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
