--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 04:49:00 PM</p>
+    <p class="lastupdate">09/13/2020 04:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">84.4&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">84.4&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">84.4&#176;F</td>
+        <td class="data">83.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.7&#176;F</td>
+        <td class="data">45.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">25%</td>
+        <td class="data">26%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.849 inHg (0.001)</td>
+        <td class="data">29.850 inHg (0.001)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph SSE (158&#176;)</td>
+        <td class="data">5 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          255
+          254
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:42:02 PM">
-            79.4</span><br/>
+          <span title="04:51:02 PM">
+            79.5</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:42:02 PM (Sunday)">
-            79.4</span><br/>
+          <span title="04:51:02 PM (Sunday)">
+            79.5</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 2 hours, 2 minutes</td>
+      <td class="data">12 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 2 hours, 2 minutes</td>
+      <td class="data">12 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
