--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 04:59:00 PM</p>
+    <p class="lastupdate">09/13/2020 05:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">83.4&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">83.4&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">83.4&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.9&#176;F</td>
+        <td class="data">44.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.849 inHg (0.002)</td>
+        <td class="data">29.848 inHg (0.004)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">8 mph S (180&#176;)</td>
+        <td class="data">5 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="04:41:26 PM">
-            45.7</span><br/>
+          <span title="05:00:14 PM">
+            45.8</span><br/>
           <span title="02:16:06 PM">
             36.3</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:41:26 PM (Sunday)">
-            45.7</span><br/>
+          <span title="05:00:14 PM (Sunday)">
+            45.8</span><br/>
           <span title="02:16:06 PM (Sunday)">
             36.3</span>
         </td>
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          190
+          189
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          190
+          189
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 2 hours, 12 minutes</td>
+      <td class="data">12 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 2 hours, 12 minutes</td>
+      <td class="data">12 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
